User Currency LineItem Detail Accounting Pages

--- a/PMS-PropertyHapa.Staff/Views/Accounting/Rent.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Rent.cshtml
@@ -9,11 +9,11 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Coming Soon</h3>
+                    <h3>Rent</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Coming Soon</li>
-                        <li class="breadcrumb-item active">Coming Soon</li>
+                        <li class="breadcrumb-item">Rent</li>
+                        <li class="breadcrumb-item active">List</li>
                     </ol>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h4 class="card-title">
-                            Coming Soon
+                            Rent
                         </h4>
                     </div>
                     <div class="card-body">
