--- a/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
@@ -7,22 +7,22 @@
 
 <style>
     .nav-sidebar {
-        background-color: #f8f9fa; /* Background color */
-        border-radius: 10px; /* Rounded corners */
-        padding: 10px; /* Padding around the links */
+        background-color: #f8f9fa; 
+        border-radius: 10px; 
+        padding: 10px; 
     }
 
         .nav-sidebar .nav-link {
-            color: #212529; /* Link color */
-            padding: 8px 20px; /* Padding for each link */
-            border-radius: 5px; /* Rounded corners for links */
-            margin-bottom: 5px; /* Margin between links */
+            color: #212529; 
+            padding: 8px 20px; 
+            border-radius: 5px; 
+            margin-bottom: 5px; 
         }
 
             .nav-sidebar .nav-link.active {
-                background-color: #dc3545; /* Red background for active link */
-                color: #fff; /* Active link text color */
-                font-weight: bold; /* Bold font for active link */
+                background-color: #dc3545; 
+                color: #fff; 
+                font-weight: bold; 
             }
 </style>
 
@@ -52,7 +52,7 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-2">
+                            <div class="col-3">
                                 <!-- Side Navbar -->
                                 <nav class="nav flex-column nav-sidebar">
                                     <a class="nav-link active" data-form-id="applicantInfo" href="#"><i class="fa fa-clipboard"></i>Applicant Info</a>
@@ -69,7 +69,7 @@
                                     <a class="nav-link" data-form-id="termsCondition" href="#"><i class="icofont icofont-file-alt"></i>Terms & Condition</a>
                                 </nav>
                             </div>
-                            <div class="col-10">
+                            <div class="col-9">
                                 <!-- Forms for different sections -->
                                 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
@@ -406,7 +406,7 @@
                                                             <div class="mb-3">
                                                                 <label for="" class="form-label">Pet Picture</label>
                                                                 <input type="file" class="form-control petPictureFile" onchange="handlePetPictureChange(this)" value="" name="PetPicture" accept="image/*">
-                                                                <img class="petPreview" src="@pet.Picture" alt="Pet Preview" style="max-width: 100%;">
+                                                                <img class="petPreview" src="@pet.Picture" style="max-width: 100%;">
                                                             </div>
                                                         </div>
                                                         <div class="col">
