--- a/PMS-PropertyHapa/Views/Auth/Register.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Register.cshtml
@@ -122,11 +122,23 @@
                     </select>
                 </div>
                 <div class="form-group col-md-6">
+                    <label for="currency" class="form-label">Currency</label>
+                    <select class="form-control" id="currency">
+                        <option value="" selected disabled hidden>Select Currency</option>
+                        <option value="USD">USD - United States Dollar ($)</option>
+                        <option value="EUR">EUR - Euro (€)</option>
+                        <option value="GBP">GBP - British Pound (£)</option>
+                        <option value="JPY">JPY - Japanese Yen (¥)</option>
+                        <option value="INR">INR - Indian Rupee (₹)</option>
+                    </select>
+                </div>
+                
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
                     <label for="password">Password</label>
                     <input class="form-control" id="password" type="password" name="password" placeholder="Password">
                 </div>
-            </div>
-            <div class="row">
                 <div class="form-group col-md-6">
                     <label for="confirmPassword">Confirm Password</label>
                     <input class="form-control" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password">
@@ -471,6 +483,7 @@
             PropertyTypeId: $("#propertyType").val(),
             Units: $("#unitsFinal").val(),
             LeadGenration: $("#leadGeneration").val(),
+            Currency: $("#currency").val(),
             SubscriptionName: $("#subscriptionName").val(),
             SubscriptionId: $("#subscriptionId").val(),
         };
